[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/zoomed_out_player.gd" type="Script" id=1]
[ext_resource path="res://art/ships/player_piece_blue.png" type="Texture" id=2]
[ext_resource path="res://scenes/misc/radar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/animations/trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/misc/customcamera.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.94538
height = 6.27171

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0.0390625, 1, 0, 0, 0.0333333, 1, 1 )

[node name="zoomed_out_player" type="Area2D"]

z_index = 3
z_as_relative = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
station1pth = null

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="transition_timer" type="Timer" parent="." index="2"]

pause_mode = 2
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="radar" parent="." index="3" instance=ExtResource( 3 )]

[node name="trail" parent="." index="4" instance=ExtResource( 4 )]

z_index = 2
z_as_relative = false
width = 2.0
default_color = Color( 0, 0.166667, 1, 1 )
gradient = SubResource( 2 )
_sections_unfolded = [ "Fill", "Material", "Visibility", "Z Index" ]
target_path = NodePath("..")
trail_length = 20

[node name="customcamera" parent="." index="5" instance=ExtResource( 5 )]

current = true
limit_left = 0
limit_top = 0
limit_right = 60000
limit_bottom = 40000
_sections_unfolded = [ "Limit", "Smoothing" ]

[node name="weapon1_muzzle" type="Position2D" parent="." index="6"]

position = Vector2( 10, 0 )
_sections_unfolded = [ "Transform" ]

[node name="weapon1" type="Node" parent="." index="7"]

editor/display_folded = true

[node name="weapon_container" type="Node" parent="weapon1" index="0"]

[node name="weapon_timer" type="Timer" parent="weapon1" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon2" type="Node" parent="." index="8"]

editor/display_folded = true

[node name="weapon_container" type="Node" parent="weapon2" index="0"]

[node name="weapon_timer" type="Timer" parent="weapon2" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon3" type="Node" parent="." index="9"]

editor/display_folded = true

[node name="weapon_container" type="Node" parent="weapon3" index="0"]

[node name="weapon_timer" type="Timer" parent="weapon3" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon4" type="Node" parent="." index="10"]

editor/display_folded = true

[node name="weapon_container" type="Node" parent="weapon4" index="0"]

[node name="weapon_timer" type="Timer" parent="weapon4" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon5" type="Node" parent="." index="11"]

editor/display_folded = true

[node name="weapon_container" type="Node" parent="weapon5" index="0"]

[node name="weapon_timer" type="Timer" parent="weapon5" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="shieldtimer" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="area_entered" from="." to="." method="_on_zoomed_out_player_area_entered"]

[connection signal="timeout" from="transition_timer" to="." method="_on_transition_timer_timeout"]

[connection signal="timeout" from="shieldtimer" to="." method="_on_shieldtimer_timeout"]


